--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,7 +6,7 @@
 											xmlns:h="http://java.sun.com/jsf/html"
 											xmlns:f="http://java.sun.com/jsf/core"
 											xmlns:ui="http://java.sun.com/jsf/facelets"
-											xmlns:sec="http://www.springframework.org/security/tags"
+											xmlns:sec="http://www.springframework.org/security/facelets/tags"
 											xmlns:p="http://primefaces.org/ui "> <!--<![endif]-->
     <h:head>
         <meta charset="utf-8"/>
