--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -23,9 +23,6 @@
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
         <link rel="stylesheet" href="css/main.css"/>
-
-        <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-
     </h:head>
     <h:body>
 		<f:view>
@@ -109,11 +106,10 @@
 		      </footer>
 		    </div>
      	</f:view>
-        <script src="js/jquery-1.11.0.min.js"></script>
 
-        <script src="js/bootstrap.min.js"></script>
-
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+		<script src='js/modernizr-2.6.2-respond-1.1.0.min.js' ></script>
+        <script src='js/jquery-1.11.0.min.js' ></script>
+        <script src='js/bootstrap.min.js' ></script>
+        <script src='js/plugins.js' ></script>
      </h:body>
 </html>
